# tiktok-downloader

./: .gitignore  GITHUB_DEPLOYMENT.md  LICENSE  README.md  requirements-deploy.txt  requirements.txt
imp/final_package/: CHANGELOG.md  CONTRIBUTING.md  DEPLOY.md  DOMAIN_RECOMMENDATIONS.md  ENHANCED_HASHTAGS.md  FREE_HOSTING_DEPLOYMENT_GUIDE.md  LICENSE  PROJECT_RECREATION_GUIDE.md  QUICK_DEPLOY.sh  README.md  README_ENHANCED.md  SEO_FEATURES.md  app.py  pyproject.toml  replit.md
imp/final_package/static/css/: style.css
imp/final_package/static/js/: app.js
imp/final_package/templates/: index.html
templates/: index.html
video-downloader/: app.py
video-downloader/templates/: index.txt
